<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_maroon"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add_new_task"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add_your_task"
            android:fontFamily="serif"
            android:textColor="@color/maroon"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg_gray_corner_10"
            android:orientation="vertical">

          <!--  <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autofillHints="testHint"
                android:background="@drawable/bg_white"
                android:hint="@string/dialog_add_title"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                />
-->
            <EditText
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:autofillHints="testHint"
                android:background="@drawable/bg_white"
                android:hint="@string/add_task"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_maroon_gradient_right_brown_corner_10"
                android:gravity="center"
                android:text="@string/dialog_button_Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:shadowColor="@color/black"
                 android:elevation="20sp" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_maroon_gradient_left_brown_corner_10"
                android:gravity="center"
                android:text="@string/dialog_button_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:shadowColor="@color/black"
                android:elevation="20sp"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>